<resources>
    <string name="app_name">reddit</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_subreddits">Subreddits</string>
    <string name="title_posts">Posts</string>
    <string name="title_subreddit_info">Subreddit info</string>
    <string name="title_subreddit_comments">Post</string>
    <string name="title_subreddit_comments_list">All comments</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_profile">Profile</string>
    <string name="title_profile_friend">Friend list</string>

    <!--    Profile info-->

    <string name="comments">COMMENTS</string>
    <string name="add_friend">friend</string>
    <string name="remove_friend">unfriend</string>

    <!--    Subreddits-->

    <string name="button_subscribe">subscribe</string>
    <string name="button_popular">popular</string>
    <string name="button_new">new</string>
    <string name="button_search">search</string>
    <string name="button_info">info</string>

    <!--    Favourite-->

    <string name="button_subreddits">posts</string>
    <string name="button_comments">comments</string>
    <string name="button_saved_comments">saved</string>

    <!--    Profile-->

    <string name="button_friends">friends list</string>
    <string name="button_clear">clear data</string>
    <string name="button_logout">logout</string>

    <!--    Boarding-->

    <string name="boarding_title_one">Welcome to Reddit!</string>
    <string name="boarding_description_one">Here you can find communities according to your interests.</string>
    <string name="boarding_title_two">Talk to people</string>
    <string name="boarding_description_two">Find people with the same interests as you</string>
    <string name="boarding_login_button">Login</string>


    <!--    Authentication-->

    <string name="parse_url" translatable="false">https://www.reddit.com/api/v1/authorize</string>
    <string name="client_id" translatable="false">yDzKaSHnxkkPfRbZtIIMRA</string>
    <string name="response_type" translatable="false">code</string>
    <string name="state" translatable="false">redditappstate</string>
    <string name="redirect_uri" translatable="false">app://oauth</string>
    <string name="duration" translatable="false">permanent</string>
    <string name="scope" translatable="false">identity edit flair history modconfig modflair modlog modposts modwiki mysubreddits privatemessages read report save submit subscribe vote wikiedit wikiread</string>

    <string name="credentials" translatable="false">Basic eUR6S2FTSG54a2tQZlJiWnRJSU1SQTo=</string>
    <string name="grant_type" translatable="false">authorization_code</string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="back"><![CDATA[<<]]></string>

</resources>