<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favourite.FavouriteFragment">


    <Button
        android:id="@+id/buttonSubreddits"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_subreddits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonComments"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:text="@string/button_comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSavedComments"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_saved_comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonComments" />

<!--    <ImageView-->
<!--        android:id="@+id/empty"-->
<!--        android:visibility="invisible"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="300dp"-->
<!--        android:src="@drawable/ic_empty"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>