<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.subreddits.SubredditsFragment">

    <LinearLayout
        android:id="@+id/searchGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center|top"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp" />

        <Button
            android:id="@+id/searchButton"
            android:text="@string/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/newButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:text="@string/button_new"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchGroup" />

    <Button
        android:id="@+id/popularButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_popular"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchGroup" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>